[UPDATE] Substituted Scanner with StatefulLexer, added several tests, changed package structure, updated KeywordTrie and PreProcessor classes